// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`model-generator generates model with all CRUD methods 1`] = `
"/**
 * User model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildCreateDocument, buildUpdateDocument, buildDeleteDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, DeepExact } from "../select-types";
import type { User, UserWithRelations, UserSelect, UserFilter, UsersOrderBy, CreateUserInput, UpdateUserInput, UserPatch } from "../input-types";
export class UserModel {
  constructor(private client: OrmClient) {}
  findMany<const S extends UserSelect>(args?: FindManyArgs<DeepExact<S, UserSelect>, UserFilter, UsersOrderBy>): QueryBuilder<{
    users: ConnectionResult<InferSelectResult<UserWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("User", "users", args?.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "UserFilter", "UsersOrderBy");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "users",
      document,
      variables
    });
  }
  findFirst<const S extends UserSelect>(args?: FindFirstArgs<DeepExact<S, UserSelect>, UserFilter>): QueryBuilder<{
    users: {
      nodes: InferSelectResult<UserWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("User", "users", args?.select, {
      where: args?.where
    }, "UserFilter");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "User",
      fieldName: "users",
      document,
      variables
    });
  }
  create<const S extends UserSelect>(args: CreateArgs<DeepExact<S, UserSelect>, CreateUserInput["user"]>): QueryBuilder<{
    createUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("User", "createUser", "user", args.select, args.data, "CreateUserInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "createUser",
      document,
      variables
    });
  }
  update<const S extends UserSelect>(args: UpdateArgs<DeepExact<S, UserSelect>, {
    id: string;
  }, UserPatch>): QueryBuilder<{
    updateUser: {
      user: InferSelectResult<UserWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateDocument("User", "updateUser", "user", args.select, args.where, args.data, "UpdateUserInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "updateUser",
      document,
      variables
    });
  }
  delete(args: DeleteArgs<{
    id: string;
  }>): QueryBuilder<{
    deleteUser: {
      user: {
        id: string;
      };
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteDocument("User", "deleteUser", "user", args.where, "DeleteUserInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "User",
      fieldName: "deleteUser",
      document,
      variables
    });
  }
}"
`;

exports[`model-generator generates model without update/delete when not available 1`] = `
"/**
 * AuditLog model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildCreateDocument, buildUpdateDocument, buildDeleteDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, DeepExact } from "../select-types";
import type { AuditLog, AuditLogWithRelations, AuditLogSelect, AuditLogFilter, AuditLogsOrderBy, CreateAuditLogInput, UpdateAuditLogInput, AuditLogPatch } from "../input-types";
export class AuditLogModel {
  constructor(private client: OrmClient) {}
  findMany<const S extends AuditLogSelect>(args?: FindManyArgs<DeepExact<S, AuditLogSelect>, AuditLogFilter, AuditLogsOrderBy>): QueryBuilder<{
    auditLogs: ConnectionResult<InferSelectResult<AuditLogWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("AuditLog", "auditLogs", args?.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "AuditLogFilter", "AuditLogsOrderBy");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLogs",
      document,
      variables
    });
  }
  findFirst<const S extends AuditLogSelect>(args?: FindFirstArgs<DeepExact<S, AuditLogSelect>, AuditLogFilter>): QueryBuilder<{
    auditLogs: {
      nodes: InferSelectResult<AuditLogWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("AuditLog", "auditLogs", args?.select, {
      where: args?.where
    }, "AuditLogFilter");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "AuditLog",
      fieldName: "auditLogs",
      document,
      variables
    });
  }
  create<const S extends AuditLogSelect>(args: CreateArgs<DeepExact<S, AuditLogSelect>, CreateAuditLogInput["auditLog"]>): QueryBuilder<{
    createAuditLog: {
      auditLog: InferSelectResult<AuditLogWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("AuditLog", "createAuditLog", "auditLog", args.select, args.data, "CreateAuditLogInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "AuditLog",
      fieldName: "createAuditLog",
      document,
      variables
    });
  }
}"
`;

exports[`model-generator handles custom query/mutation names 1`] = `
"/**
 * Organization model for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
import { OrmClient } from "../client";
import { QueryBuilder, buildFindManyDocument, buildFindFirstDocument, buildCreateDocument, buildUpdateDocument, buildDeleteDocument } from "../query-builder";
import type { ConnectionResult, FindManyArgs, FindFirstArgs, CreateArgs, UpdateArgs, DeleteArgs, InferSelectResult, DeepExact } from "../select-types";
import type { Organization, OrganizationWithRelations, OrganizationSelect, OrganizationFilter, OrganizationsOrderBy, CreateOrganizationInput, UpdateOrganizationInput, OrganizationPatch } from "../input-types";
export class OrganizationModel {
  constructor(private client: OrmClient) {}
  findMany<const S extends OrganizationSelect>(args?: FindManyArgs<DeepExact<S, OrganizationSelect>, OrganizationFilter, OrganizationsOrderBy>): QueryBuilder<{
    allOrganizations: ConnectionResult<InferSelectResult<OrganizationWithRelations, S>>;
  }> {
    const {
      document,
      variables
    } = buildFindManyDocument("Organization", "allOrganizations", args?.select, {
      where: args?.where,
      orderBy: args?.orderBy as string[] | undefined,
      first: args?.first,
      last: args?.last,
      after: args?.after,
      before: args?.before,
      offset: args?.offset
    }, "OrganizationFilter", "OrganizationsOrderBy");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "allOrganizations",
      document,
      variables
    });
  }
  findFirst<const S extends OrganizationSelect>(args?: FindFirstArgs<DeepExact<S, OrganizationSelect>, OrganizationFilter>): QueryBuilder<{
    allOrganizations: {
      nodes: InferSelectResult<OrganizationWithRelations, S>[];
    };
  }> {
    const {
      document,
      variables
    } = buildFindFirstDocument("Organization", "allOrganizations", args?.select, {
      where: args?.where
    }, "OrganizationFilter");
    return new QueryBuilder({
      client: this.client,
      operation: "query",
      operationName: "Organization",
      fieldName: "allOrganizations",
      document,
      variables
    });
  }
  create<const S extends OrganizationSelect>(args: CreateArgs<DeepExact<S, OrganizationSelect>, CreateOrganizationInput["organization"]>): QueryBuilder<{
    registerOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildCreateDocument("Organization", "registerOrganization", "organization", args.select, args.data, "CreateOrganizationInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "registerOrganization",
      document,
      variables
    });
  }
  update<const S extends OrganizationSelect>(args: UpdateArgs<DeepExact<S, OrganizationSelect>, {
    id: string;
  }, OrganizationPatch>): QueryBuilder<{
    modifyOrganization: {
      organization: InferSelectResult<OrganizationWithRelations, S>;
    };
  }> {
    const {
      document,
      variables
    } = buildUpdateDocument("Organization", "modifyOrganization", "organization", args.select, args.where, args.data, "UpdateOrganizationInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "modifyOrganization",
      document,
      variables
    });
  }
  delete(args: DeleteArgs<{
    id: string;
  }>): QueryBuilder<{
    removeOrganization: {
      organization: {
        id: string;
      };
    };
  }> {
    const {
      document,
      variables
    } = buildDeleteDocument("Organization", "removeOrganization", "organization", args.where, "DeleteOrganizationInput");
    return new QueryBuilder({
      client: this.client,
      operation: "mutation",
      operationName: "Organization",
      fieldName: "removeOrganization",
      document,
      variables
    });
  }
}"
`;
